spec/.test/config/valid/only/passes.php
<?php

return [
    'passes' => [
        'key' => new Test\TestConfigurationPass('pass31'),
        new Test\TestConfigurationPass('pass32'),
    ],
];
