spec/.test/config/invalid/metadata.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => [],
    'metadata' => 1,
    'passes' => [],
    'mappers' => [],
];
